--- a/design.css
+++ b/design.css
@@ -14,12 +14,13 @@
      background: linear-gradient(#e2c68e, rgb(194, 62, 29));
  }
 
+
+ /* TODO: Split the footer's content from the background with the before element */
  div.footing>footer {
      margin-left: auto;
      margin-right: auto;
      margin-top: 5%;
-     padding: 10px;
-     padding-bottom: 100px;
+     padding: 10px 10px 100px;
      width: auto;
      height: 150px;
      overflow: visible;
